# etcdadm

./: .gcloudignore  .gitignore  .travis.yml  BUILD  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  ROADMAP.md  SECURITY_CONTACTS  WORKSPACE  cloudbuild.yaml  git_utils.sh  go.mod  go.sum  main.go  version.sh
.github/workflows/: e2e.yml  main.yml  tag-release.yml
apis/: config.go
binary/: etcd.go
certs/: certs.go
certs/pkiutil/: pki_helpers.go  pki_helpers_test.go
cmd/: certs.go  download.go  info.go  init.go  join.go  phases.go  reset.go  root.go  version.go
cmd/etcd-backup/: BUILD.bazel  main.go
cmd/etcd-backup-ctl/: BUILD.bazel  main.go
cmd/etcd-dump/: BUILD.bazel  main.go
cmd/etcd-manager/: BUILD  BUILD.bazel  main.go
cmd/etcd-manager-ctl/: main.go
constants/: constants.go
dev/: add-symlink.sh  build-assets.sh  protoc  release.sh
dev/staging/: README.md  cloudbuild.yaml  push-etcdadm.sh  push-etcdmanager.sh  push.sh
docs/: USECASES.md  backup-restore.md  backupstructure.md
docs/diagrams/: init.md  join.md  reset.md
docs/releases/: 3.0.md
docs/relnotes/: 3.0.20190801.md
etcd/: etcd.go
etcd-manager/: .bazelrc  .gitignore  .shipbot.yaml  .travis.yml  BUILD  Dockerfile  Gopkg.toml  Makefile  OWNERS  README.md  WORKSPACE  cloudbuild-master.yaml  cloudbuild.yaml  go.mod  go.sum  recreate.sh  version.txt
etcd-manager/.github/workflows/: main.yml
etcd-manager/cmd/etcd-backup/: BUILD.bazel  main.go
etcd-manager/cmd/etcd-backup-ctl/: BUILD.bazel  main.go
etcd-manager/cmd/etcd-dump/: BUILD.bazel  main.go
etcd-manager/cmd/etcd-manager/: BUILD  BUILD.bazel  main.go  main_test.go  tools.go
etcd-manager/cmd/etcd-manager-ctl/: BUILD.bazel  main.go
etcd-manager/dev/: add-symlink.sh  build-assets.sh  check-hashes.sh  last-release  protoc  release.sh  set-version.sh  tag-release.sh
etcd-manager/docs/: backupstructure.md  release-process.md  restore-troubleshooting.md  walkthrough.md
etcd-manager/docs/releases/: 3.0.md
etcd-manager/images/: BUILD  etcd.bzl
etcd-manager/images/base/: BUILD
etcd-manager/pkg/backup/: BUILD.bazel  fs.go  store.go  vfs.go
etcd-manager/pkg/backupcontroller/: BUILD.bazel  cleanup.go  controller.go  parse.go  parse_test.go
etcd-manager/pkg/commands/: BUILD.bazel  store.go  vfs.go
etcd-manager/pkg/contextutil/: BUILD.bazel  poll.go
etcd-manager/pkg/controller/: BUILD  BUILD.bazel  commands.go  controller.go  etcdclusterstate.go  newcluster.go  peer.go  reconcile_configuration.go  restore.go  upgrade.go  utils.go
etcd-manager/pkg/dns/: BUILD.bazel  dns.go
etcd-manager/pkg/etcd/: BUILD.bazel  backup.go  etcdprocess.go  etcdserver.go  initsystem.go  manager.go  pki.go  restore.go  tar.go
etcd-manager/pkg/etcd/dump/: BUILD.bazel  dumpsink.go  streamdumpsink.go
etcd-manager/pkg/etcdclient/: BUILD  BUILD.bazel  client.go  interfaces.go  localnode.go  member.go  v2.go  v3.go
etcd-manager/pkg/etcdversions/: BUILD.bazel  mappings.go
etcd-manager/pkg/hostmount/: BUILD.bazel  nsenter.go
etcd-manager/pkg/hosts/: BUILD.bazel  hosts.go  hosts_test.go
etcd-manager/pkg/ioutils/: BUILD  BUILD.bazel  create.go
etcd-manager/pkg/legacy/: BUILD.bazel  adopt.go
etcd-manager/pkg/locking/: BUILD.bazel  flock.go  fs.go  info.go  interfaces.go  lock_test.go
etcd-manager/pkg/metrics/: BUILD.bazel  metrics.go
etcd-manager/pkg/pki/: BUILD.bazel  cas.go  certs.go  certutils.go  fs.go  fs_test.go  inmem.go  parse_test.go  store.go  utils.go
etcd-manager/tools/: get_workspace_status.sh
experiment/: ip.go
hack/: update-gofmt.sh  verify-all.sh  verify-boilerplate.go  verify-boilerplate.sh  verify-build.sh  verify-gofmt.sh  verify-golint.sh  verify-gotest.sh  verify-govet.sh  verify-shellcheck.sh  verify-spelling.sh  verify-version.sh  verify-whitespace.sh
hack/tools/: README.md  go.mod  tools.go
images/: BUILD
initsystem/: initsystem.go  systemd.go
initsystem/execinitsystem/: initsystem.go  process.go
initsystem/kubelet/: initsystem.go
pkg/backup/: BUILD  BUILD.bazel  fs.go  store.go  vfs.go
pkg/backupcontroller/: BUILD.bazel  cleanup.go  controller.go
pkg/commands/: store.go  vfs.go
pkg/contextutil/: BUILD.bazel  poll.go
pkg/controller/: BUILD  BUILD.bazel  commands.go  controller.go  etcdclusterstate.go  etcdprocess.go  initspec.go  newcluster.go  reconcile_configuration.go  restore.go  upgrade.go
pkg/etcd/: BUILD  BUILD.bazel  backup.go  dump.go  etcdapi.proto  etcdprocess.go  etcdserver.go  manager.go  pki.go  restore.go  tar.go
pkg/etcd/dump/: BUILD.bazel  dump.go  dumpsink.go  streamdumpsink.go
pkg/etcdclient/: BUILD  BUILD.bazel  interfaces.go  localnode.go  member.go  v2.go  v3.go
pkg/etcdversions/: BUILD.bazel  mappings.go
pkg/hostmount/: BUILD.bazel  nsenter.go
pkg/hosts/: BUILD.bazel  hosts.go  hosts_test.go
pkg/ioutils/: BUILD.bazel
pkg/legacy/: BUILD.bazel  adopt.go
pkg/locking/: BUILD.bazel  flock.go  info.go  interfaces.go  lock_test.go
pkg/logrus/: logrus.go
pkg/pki/: BUILD.bazel  certs.go  certutils.go  fs.go  parse_test.go  store.go
pkg/privateapi/: BUILD  BUILD.bazel  cluster.pb.go  cluster.proto  discovery.go  filesystemdiscovery.go  id.go  leadership.go  peers.go  server.go
pkg/privateapi/discovery/: BUILD.bazel  discovery.go
pkg/privateapi/discovery/fs/: filesystemdiscovery.go
pkg/privateapi/discovery/vfs/: BUILD.bazel  discovery.go
pkg/urls/: BUILD.bazel  rewrite.go
pkg/volumes/: BUILD.bazel  boot.go  interfaces.go  mounter.go  retry.go
preflight/: mandatory.go
scripts/: release.sh
service/: diff.go  env_test.go  etcdctl.go  systemd.go  unit.go
snapshot/: snapshot.go
test/e2e/: cluster.sh  cluster_phases.sh  init.sh
test/integration/: BUILD.bazel  basic_test.go  clusterformation.go  clusterformation_test.go  datapersists_test.go  etcdinstalled_test.go  harness.go  resize_cluster_test.go  secure_transitions_test.go  upgradedowngrade_test.go
test/integration/harness/: BUILD.bazel  cluster.go  etcd.go  node.go
tools/: get_workspace_status.sh
util/: cmd.go  etcdclient.go  filesystem.go  symlinks.go  url_value.go
(+116 files in other folders)
