load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kope.io/etcd-manager/cmd/etcd-dump",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/etcd:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "etcd-dump",
    importpath = "kope.io/etcd-manager/cmd/etcd-dump",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
