load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kope.io/etcd-manager/cmd/etcd-manager",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//pkg/backup:go_default_library",
        "//pkg/commands:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/etcd:go_default_library",
        "//pkg/legacy:go_default_library",
        "//pkg/locking:go_default_library",
        "//pkg/privateapi:go_default_library",
        "//pkg/privateapi/discovery:go_default_library",
        "//pkg/privateapi/discovery/vfs:go_default_library",
        "//pkg/volumes:go_default_library",
        "//pkg/volumes/aws:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/kops/util/pkg/vfs:go_default_library",
    ],
)

go_binary(
    name = "etcd-manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
