load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["store.go"],
    importpath = "kope.io/etcd-manager/pkg/backup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//pkg/ioutils:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
