load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hosts.go"],
    importpath = "kope.io/etcd-manager/pkg/hosts",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dns:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
