load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "flock.go",
        "fs.go",
        "info.go",
        "interfaces.go",
    ],
    importpath = "kope.io/etcd-manager/pkg/locking",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lock_test.go",
    ],
    importpath = "kope.io/etcd-manager/pkg/locking",
    library = ":go_default_library",
)
