load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "certs.go",
        "fs.go",
        "inmem.go",
        "store.go",
        "utils.go",
    ],
    importpath = "kope.io/etcd-manager/pkg/pki",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/client-go/util/cert:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
