load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
    name = "privateapi_proto",
    srcs = ["cluster.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "privateapi_go_proto",
    importpath = "kope.io/etcd-manager/pkg/privateapi",
    proto = ":privateapi_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "discovery.go",
        "filesystemdiscovery.go",
        "id.go",
        "leadership.go",
        "peers.go",
        "server.go",
    ],
    embed = [":privateapi_go_proto"],
    importpath = "kope.io/etcd-manager/pkg/privateapi",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/contextutil:go_default_library",
        "//pkg/ioutils:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
