load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "clusterformation_test.go",
        "datapersists_test.go",
    ],
    importpath = "kope.io/etcd-manager/test/integration",
    deps = [
        "//test/integration/harness:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
