load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    size = "medium",
    srcs = [
        "clusterformation_test.go",
        "datapersists_test.go",
        "etcdinstalled_test.go",
        "resize_cluster_test.go",
        "upgradedowngrade_test.go",
    ],
    data = [
        "//:etcd-v2.2.1-linux-amd64_etcd",
        "//:etcd-v2.2.1-linux-amd64_etcdctl",
        "//:etcd-v3.2.18-linux-amd64_etcd",
        "//:etcd-v3.2.18-linux-amd64_etcdctl",
    ],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//pkg/etcd:go_default_library",
        "//test/integration/harness:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
