load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kope.io/etcd-manager/cmd/etcd-backup",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backup:go_default_library",
        "//pkg/backupcontroller:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "etcd-backup",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
