load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "etcd-backup_lib",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/cmd/etcd-backup",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backup",
        "//pkg/backupcontroller",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "etcd-backup",
    embed = [":etcd-backup_lib"],
    visibility = ["//visibility:public"],
)
