load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/cmd/etcd-dump",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backup:go_default_library",
        "//pkg/etcd:go_default_library",
        "//pkg/etcd/dump:go_default_library",
        "//pkg/etcdclient:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)

go_binary(
    name = "etcd-dump",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
