load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "etcd-dump_lib",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/cmd/etcd-dump",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backup",
        "//pkg/etcd",
        "//pkg/etcd/dump",
        "//pkg/etcdclient",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "etcd-dump",
    embed = [":etcd-dump_lib"],
    visibility = ["//visibility:public"],
)
