load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/cmd/etcd-manager-ctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//pkg/backup:go_default_library",
        "//pkg/commands:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "etcd-manager-ctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
