load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "etcd-manager-ctl_lib",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/cmd/etcd-manager-ctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/etcd",
        "//pkg/backup",
        "//pkg/commands",
        "//vendor/github.com/golang/protobuf/proto",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "etcd-manager-ctl",
    embed = [":etcd-manager-ctl_lib"],
    visibility = ["//visibility:public"],
)
