load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backup",
    srcs = [
        "store.go",
        "vfs.go",
    ],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/backup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd",
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/k8s.io/kops/util/pkg/vfs",
    ],
)
