load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "store.go",
        "vfs.go",
    ],
    importpath = "kope.io/etcd-manager/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/k8s.io/kops/util/pkg/vfs:go_default_library",
    ],
)
