load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "store.go",
        "vfs.go",
    ],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/k8s.io/kops/util/pkg/vfs:go_default_library",
    ],
)
