load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "commands.go",
        "controller.go",
        "etcdclusterstate.go",
        "newcluster.go",
        "peer.go",
        "reconcile_configuration.go",
        "restore.go",
        "upgrade.go",
        "utils.go",
    ],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd",
        "//pkg/backup",
        "//pkg/backupcontroller",
        "//pkg/commands",
        "//pkg/contextutil",
        "//pkg/etcd",
        "//pkg/etcdclient",
        "//pkg/etcdversions",
        "//pkg/locking",
        "//pkg/pki",
        "//pkg/privateapi",
        "//pkg/urls",
        "//vendor/github.com/golang/protobuf/proto",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)
