load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcd",
    srcs = [
        "backup.go",
        "etcdprocess.go",
        "etcdserver.go",
        "initsystem.go",
        "pki.go",
        "restore.go",
        "tar.go",
    ],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/etcd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd",
        "//pkg/backup",
        "//pkg/contextutil",
        "//pkg/dns",
        "//pkg/etcdclient",
        "//pkg/etcdversions",
        "//pkg/legacy",
        "//pkg/pki",
        "//pkg/privateapi",
        "//pkg/urls",
        "//vendor/github.com/blang/semver/v4:semver",
        "//vendor/github.com/golang/protobuf/proto",
        "//vendor/golang.org/x/net/context",
        "//vendor/k8s.io/client-go/util/cert",
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/sigs.k8s.io/etcdadm/apis",
        "//vendor/sigs.k8s.io/etcdadm/initsystem",
        "//vendor/sigs.k8s.io/etcdadm/service",
    ],
)
