load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcdclient",
    srcs = [
        "interfaces.go",
        "localnode.go",
        "member.go",
        "v3.go",
    ],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/etcdclient",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/go.etcd.io/etcd/api/v3/version",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)
