load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hostmount",
    srcs = ["nsenter.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/hostmount",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/k8s.io/mount-utils",
        "//vendor/k8s.io/utils/nsenter",
    ],
)
