load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hosts.go"],
    importpath = "sigs.k8s.io/etcdadm/etcd-manager/pkg/hosts",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dns:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hosts_test.go"],
    embed = [":go_default_library"],
)
